[package]
name = "sidekiq-kubernetes-autoscaler"
version = "0.1.0"
authors = ["Don Petersen <don@donpetersen.net>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
bb8-redis = "0.8.0"
redis = { version = "0.19", features = [ "tokio-comp" ] }
kube = "0.47"
kube-runtime = "0.47"
kube-derive = "0.47"
k8s-openapi = { version = "0.10", default-features = false, features = ["v1_17"] }
anyhow = "1.0"
tokio = { version = "1.1", features = ["full"] }
tokio-util = "0.6"
conv = "0.3"
futures = "0.3.12"
futures-util = "0.3.12"

[dev-dependencies]
nix = "0.19"
tokio-test = "0.4.0"
